--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
  base64-dec=NjU3MzcyNjkxNzQ5MjczNjEy.XfwQBw.BJfTxkd9MfrzVHoWK2vWXuo-Zvw
  base2-dec=Njk1MzcwMTA1MzA3MTM2MTMy.XoZL4A.xlYqCk822p1MZDYqfD079sah56Q
  base2v2=Njk1MzcwMTA1MzA3MTM2MTMy.XoZL4A.L3EWyhbapfEpGXxEvfYHDNDqLPg
-
+ t=Njk1MzcwMTA1MzA3MTM2MTMy.XoZL4A.6lwPl_guFjPry4mlZAnRfIsrvMs
 }
